--- a/lk-spisok-sdelok.html
+++ b/lk-spisok-sdelok.html
@@ -55,7 +55,7 @@
                         </a>
                     </div>
                     <div class="sidebar__item">
-                        <a href="#" class="sidebar__link">
+                        <a href="./lk-analitika.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/chart.svg" alt="" class="sidebar__icon">
                             Аналитика
                         </a>
@@ -644,7 +644,7 @@
                 </a>
             </div>
             <div class="mobile-menu__item">
-                <a href="#" class="mobile-menu__link">
+                <a href="./lk-analitika.html" class="mobile-menu__link">
                     <div class="mobile-menu__icon-box">
                         <img src="dist/images/icons/sidebar/chart.svg" alt="" class="mobile-menu__icon">
                     </div>
