--- a/lk-vladelec-biznesa.html
+++ b/lk-vladelec-biznesa.html
@@ -55,7 +55,7 @@
                         </a>
                     </div>
                     <div class="sidebar__item">
-                        <a href="#" class="sidebar__link">
+                        <a href="./lk-analitika.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/chart.svg" alt="" class="sidebar__icon">
                             Аналитика
                         </a>
