--- a/lk-analitika.html
+++ b/lk-analitika.html
@@ -395,9 +395,12 @@
                                                     </select>
                                                 </div>
                                             </div>
+                                            <div class="chart-analysis__labels chart-analysis__labels_branch"></div>
                                             <div class="chart-analysis__wrapper">
                                                 <canvas class="chart-branch" width="200" height="200"></canvas>
-                                                <span class="chart-analysis__value">16 млн</span>
+                                                <div class="chart-analysis__inf">
+                                                    <span class="chart-analysis__value">16 млн</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -416,9 +419,12 @@
                                                     </select>
                                                 </div>
                                             </div>
+                                            <div class="chart-analysis__labels chart-analysis__labels_purpose"></div>
                                             <div class="chart-analysis__wrapper">
                                                 <canvas class="chart-purpose" width="200" height="200"></canvas>
-                                                <span class="chart-analysis__value">16 млн</span>
+                                                <div class="chart-analysis__inf">
+                                                    <span class="chart-analysis__value">16 млн</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -438,9 +444,12 @@
                                                     </select>
                                                 </div>
                                             </div>
+                                            <div class="chart-analysis__labels chart-analysis__labels_tools"></div>
                                             <div class="chart-analysis__wrapper">
                                                 <canvas class="chart-tools" width="200" height="200"></canvas>
-                                                <span class="chart-analysis__value">16 млн</span>
+                                                <div class="chart-analysis__inf">
+                                                    <span class="chart-analysis__value">16 млн</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
