--- a/lk-analitika.html
+++ b/lk-analitika.html
@@ -921,11 +921,25 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="analytics__section" style="padding-bottom: 300px">
+                            <div class="analytics__section">
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="calendar">
                                             <input type="text" class="calendar__input">
+                                            <div class="calendar__events">
+                                                <div class="calendar__event" data-date="2022.02.11">
+                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value calendar__event-value_green">1 002 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value">402 234 ₸</span></div>
+                                                    <button class="calendar__event-close"></button>
+                                                </div>
+                                                <div class="calendar__event" data-date="2022.02.12">
+                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value calendar__event-value_green">1 002 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value">402 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value">402 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value calendar__event-value_yellow">20 234 ₸ (пеня)</span></div>
+                                                    <button class="calendar__event-close"></button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-md-8">
