--- a/lk-analitika.html
+++ b/lk-analitika.html
@@ -164,8 +164,8 @@
                         </div>
                         <div class="analytics__main">
                             <div class="analytics__section">
-                                <div class="row">
-                                    <div class="col-md-6">
+                                <div class="row gy-2 gy-lg-4">
+                                    <div class="col-xl-6">
                                         <div class="box invest-analysis">
                                             <div class="invest-analysis__inf">
                                                 <h3 class="lk-title3 lk-title3_medium invest-analysis__title">Инвестиции
@@ -211,7 +211,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-xl-6">
                                         <div class="box invest-analysis">
                                             <div class="invest-analysis__inf">
                                                 <h3 class="lk-title3 lk-title3_medium invest-analysis__title">Текущий
@@ -260,8 +260,8 @@
                                 </div>
                             </div>
                             <div class="analytics__section">
-                                <div class="row">
-                                    <div class="col-md-4">
+                                <div class="row gy-2 gy-lg-4">
+                                    <div class="col-xl-4 col-lg-6">
                                         <div class="box profit-analysis">
                                             <div class="profit-analysis__header">
                                                 <h3 class="lk-title3 lk-title3_medium profit-analysis__title">Средний
@@ -271,7 +271,7 @@
                                                     class="profit-analysis__type">₸</span></div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-xl-4 col-lg-6">
                                         <div class="box profit-analysis">
                                             <div class="profit-analysis__header">
                                                 <h3 class="lk-title3 lk-title3_medium profit-analysis__title">Доходность
@@ -282,7 +282,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-xl-4 col-lg-6">
                                         <div class="box profit-analysis">
                                             <div class="profit-analysis__header">
                                                 <h3 class="lk-title3 lk-title3_medium profit-analysis__title">Сделки
@@ -378,8 +378,8 @@
                                 </div>
                             </div>
                             <div class="analytics__section">
-                                <div class="row gy-4">
-                                    <div class="col-md-4">
+                                <div class="row gy-2 gy-lg-4">
+                                    <div class="col-xl-4 col-lg-6">
                                         <div class="chart-analysis box">
                                             <div class="chart-analysis__header">
                                                 <h3 class="lk-title3 lk-title3_medium chart-analysis__title">Отрасли
@@ -404,7 +404,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-xl-4 col-lg-6">
                                         <div class="chart-analysis box">
                                             <div class="chart-analysis__header">
                                                 <h3 class="lk-title3 lk-title3_medium chart-analysis__title">Цели</h3>
@@ -428,7 +428,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-xl-4 col-lg-6">
                                         <div class="chart-analysis box">
                                             <div class="chart-analysis__header">
                                                 <h3 class="lk-title3 lk-title3_medium chart-analysis__title">Инструменты
@@ -456,8 +456,8 @@
                                 </div>
                             </div>
                             <div class="analytics__section">
-                                <div class="row">
-                                    <div class="col-md-4">
+                                <div class="row gy-2 gy-lg-4">
+                                    <div class="col-xl-4">
                                         <div class="chart-analysis chart-analysis_deals box">
                                             <div class="chart-analysis__header">
                                                 <h3 class="lk-title3 lk-title3_medium chart-analysis__title">Сделки
@@ -483,9 +483,9 @@
                                             <div class="chart-deals__labels" id="legend-deals"></div>
                                         </div>
                                     </div>
-                                    <div class="col-md-8">
+                                    <div class="col-xl-8">
                                         <div class="row gy-3">
-                                            <div class="col-md-6">
+                                            <div class="col-xxl-6">
                                                 <div class="forecast-analysis box">
                                                     <div class="forecast-analysis__inf">
                                                         <h3 class="lk-title3 lk-title3_medium">Прогнозируемый доход</h3>
@@ -496,7 +496,7 @@
                                                         class="forecast-analysis__img">
                                                 </div>
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="col-xxl-6">
                                                 <div class="forecast-analysis box">
                                                     <div class="forecast-analysis__inf">
                                                         <h3 class="lk-title3 lk-title3_medium">Номинальный доход</h3>
@@ -509,7 +509,7 @@
                                                         class="forecast-analysis__img">
                                                 </div>
                                             </div>
-                                            <div class="col-md-12">
+                                            <div class="col-12">
                                                 <div class="forecast-graph">
                                                     <div class="forecast-graph__header">
                                                         <div class="forecast-graph__inf">
@@ -552,8 +552,8 @@
                                 </div>
                             </div>
                             <div class="analytics__section">
-                                <div class="row">
-                                    <div class="col-md-6">
+                                <div class="row gy-2 gy-lg-4">
+                                    <div class="col-xl-6">
                                         <div class="deals-analysis box">
                                             <div class="deals-analysis__header">
                                                 <h3 class="lk-title3 lk-title3_medium">Сделки</h3>
@@ -642,10 +642,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-xl-6">
                                         <div class="payment-analysis box">
                                             <div class="payment-analysis__header">
-                                                <h3 class="lk-title3 lk-title_medium">Платежи</h3>
+                                                <h3 class="lk-title3 lk-title3_medium">Платежи</h3>
                                                 <div class="payment-analysis__selects">
                                                     <div
                                                         class="select select_medium select_small payment-analysis__select">
@@ -922,8 +922,8 @@
                                 </div>
                             </div>
                             <div class="analytics__section">
-                                <div class="row">
-                                    <div class="col-md-4">
+                                <div class="row gy-2 gy-lg-4">
+                                    <div class="col-xl-4">
                                         <div class="calendar">
                                             <input type="text" class="calendar__input">
                                             <div class="calendar__events">
@@ -942,7 +942,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-8">
+                                    <div class="col-xl-8">
                                         <div class="discuss box">
                                             <div class="discuss__header">
                                                 <h3 class="lk-title3 lk-title3_medium">Лента новостей</h3>
