--- a/lk-analitika.html
+++ b/lk-analitika.html
@@ -298,83 +298,65 @@
                             </div>
                             <div class="analytics__section">
                                 <div class="nums-analysis box">
-                                    <table class="nums-analysis__table">
-                                        <tr>
-                                            <td>
-                                                <div class="num-analysis nums-analysis__item">
-                                                    <div class="num-analysis__header">
-                                                        <h3 class="lk-title3 lk-title3_medium num-analysis__title">
-                                                            Просрочки до 30 дней</h3>
-                                                    </div>
-                                                    <div class="num-analysis__value">0 <span
-                                                            class="num-analysis__type">%</span></div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="num-analysis nums-analysis__item">
-                                                    <div class="num-analysis__header">
-                                                        <h3 class="lk-title3 lk-title3_medium num-analysis__title">
-                                                            Просрочки от 30 до 90 дней</h3>
-                                                    </div>
-                                                    <div class="num-analysis__value">2 <span
-                                                            class="num-analysis__type">%</span></div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="num-analysis nums-analysis__item">
-                                                    <div class="num-analysis__header">
-                                                        <h3 class="lk-title3 lk-title3_medium num-analysis__title">
-                                                            Дефолты</h3>
-                                                        <span
-                                                            class="profit-num profit-num_yellow profit-num_up num-analysis__profit">3,6%</span>
-                                                    </div>
-                                                    <div class="num-analysis__value">2 <span
-                                                            class="num-analysis__type">%</span></div>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="num-analysis nums-analysis__item">
-                                                    <div class="num-analysis__header">
-                                                        <h3 class="lk-title3 lk-title3_medium num-analysis__title">Займы
-                                                        </h3>
-                                                        <span
-                                                            class="profit-num profit-num_green num-analysis__profit">24%
-                                                            доходность</span>
-                                                    </div>
-                                                    <div class="num-analysis__value">20 000 000 <span
-                                                            class="num-analysis__type">₸</span></div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="num-analysis nums-analysis__item">
-                                                    <div class="num-analysis__header">
-                                                        <h3 class="lk-title3 lk-title3_medium num-analysis__title">
-                                                            Облигации</h3>
-                                                        <span
-                                                            class="profit-num profit-num_green num-analysis__profit">24%
-                                                            доходность</span>
-                                                    </div>
-                                                    <div class="num-analysis__value">20 000 000 <span
-                                                            class="num-analysis__type">₸</span></div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="num-analysis nums-analysis__item">
-                                                    <div class="num-analysis__header">
-                                                        <h3 class="lk-title3 lk-title3_medium num-analysis__title">Доли
-                                                        </h3>
-                                                        <span
-                                                            class="profit-num profit-num_green num-analysis__profit">24%
-                                                            доходность</span>
-                                                    </div>
-                                                    <div class="num-analysis__value">0 <span
-                                                            class="num-analysis__type">₸</span></div>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </table>
+                                    <div class="num-analysis nums-analysis__item">
+                                        <div class="num-analysis__header">
+                                            <h3 class="lk-title3 lk-title3_medium num-analysis__title">
+                                                Просрочки до 30 дней</h3>
+                                        </div>
+                                        <div class="num-analysis__value">0 <span class="num-analysis__type">%</span>
+                                        </div>
+                                    </div>
+                                    <div class="num-analysis nums-analysis__item">
+                                        <div class="num-analysis__header">
+                                            <h3 class="lk-title3 lk-title3_medium num-analysis__title">
+                                                Просрочки от 30 до 90 дней</h3>
+                                        </div>
+                                        <div class="num-analysis__value">2 <span class="num-analysis__type">%</span>
+                                        </div>
+                                    </div>
+                                    <div class="num-analysis nums-analysis__item">
+                                        <div class="num-analysis__header">
+                                            <h3 class="lk-title3 lk-title3_medium num-analysis__title">
+                                                Дефолты</h3>
+                                            <span
+                                                class="profit-num profit-num_yellow profit-num_up num-analysis__profit">3,6%</span>
+                                        </div>
+                                        <div class="num-analysis__value">2 <span class="num-analysis__type">%</span>
+                                        </div>
+                                    </div>
+
+                                    <div class="num-analysis nums-analysis__item">
+                                        <div class="num-analysis__header">
+                                            <h3 class="lk-title3 lk-title3_medium num-analysis__title">Займы
+                                            </h3>
+                                            <span class="profit-num profit-num_green num-analysis__profit">24%
+                                                <span class="num-analysis__profit-text">доходность</span></span>
+                                        </div>
+                                        <div class="num-analysis__value">20 000 000 <span
+                                                class="num-analysis__type">₸</span></div>
+                                    </div>
+
+                                    <div class="num-analysis nums-analysis__item">
+                                        <div class="num-analysis__header">
+                                            <h3 class="lk-title3 lk-title3_medium num-analysis__title">
+                                                Облигации</h3>
+                                            <span class="profit-num profit-num_green num-analysis__profit">24%
+                                                <span class="num-analysis__profit-text">доходность</span></span>
+                                        </div>
+                                        <div class="num-analysis__value">20 000 000 <span
+                                                class="num-analysis__type">₸</span></div>
+                                    </div>
+
+                                    <div class="num-analysis nums-analysis__item">
+                                        <div class="num-analysis__header">
+                                            <h3 class="lk-title3 lk-title3_medium num-analysis__title">Доли
+                                            </h3>
+                                            <span class="profit-num profit-num_green num-analysis__profit">24%
+                                                <span class="num-analysis__profit-text">доходность</span></span>
+                                        </div>
+                                        <div class="num-analysis__value">0 <span class="num-analysis__type">₸</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="analytics__section">
@@ -474,7 +456,8 @@
                                                 </div>
                                             </div>
                                             <div class="chart-analysis__wrapper">
-                                                <canvas class="chart-deals" width="200" height="200" id="chart-deals"></canvas>
+                                                <canvas class="chart-deals" width="200" height="200"
+                                                    id="chart-deals"></canvas>
                                                 <div class="chart-analysis__inf">
                                                     <div class="chart-analysis__text">Всего сделок</div>
                                                     <span class="chart-analysis__value">20</span>
@@ -928,15 +911,24 @@
                                             <input type="text" class="calendar__input">
                                             <div class="calendar__events">
                                                 <div class="calendar__event" data-date="2022.02.11">
-                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value calendar__event-value_green">1 002 234 ₸</span></div>
-                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value">402 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз <span
+                                                            class="calendar__event-value calendar__event-value_green">1
+                                                            002 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз <span
+                                                            class="calendar__event-value">402 234 ₸</span></div>
                                                     <button class="calendar__event-close"></button>
                                                 </div>
                                                 <div class="calendar__event" data-date="2022.02.12">
-                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value calendar__event-value_green">1 002 234 ₸</span></div>
-                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value">402 234 ₸</span></div>
-                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value">402 234 ₸</span></div>
-                                                    <div class="calendar__event-text">КазТрансГаз  <span class="calendar__event-value calendar__event-value_yellow">20 234 ₸ (пеня)</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз <span
+                                                            class="calendar__event-value calendar__event-value_green">1
+                                                            002 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз <span
+                                                            class="calendar__event-value">402 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз <span
+                                                            class="calendar__event-value">402 234 ₸</span></div>
+                                                    <div class="calendar__event-text">КазТрансГаз <span
+                                                            class="calendar__event-value calendar__event-value_yellow">20
+                                                            234 ₸ (пеня)</span></div>
                                                     <button class="calendar__event-close"></button>
                                                 </div>
                                             </div>
