--- a/lk-analitika.html
+++ b/lk-analitika.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css?v=102">
+    <link rel="stylesheet" href="dist/css/styles.css">
     <title>iKapitalist - Аналитика инвестора</title>
 </head>
 
@@ -456,14 +456,13 @@
                                                 </div>
                                             </div>
                                             <div class="chart-analysis__wrapper">
-                                                <canvas class="chart-deals" width="200" height="200"
-                                                    id="chart-deals"></canvas>
+                                                <canvas class="chart-deals" width="200" height="200"></canvas>
                                                 <div class="chart-analysis__inf">
                                                     <div class="chart-analysis__text">Всего сделок</div>
                                                     <span class="chart-analysis__value">20</span>
                                                 </div>
                                             </div>
-                                            <div class="chart-deals__labels" id="legend-deals"></div>
+                                            <div class="chart-deals__labels"></div>
                                         </div>
                                     </div>
                                     <div class="col-xl-8">
@@ -931,6 +930,12 @@
                                                             234 ₸ (пеня)</span></div>
                                                     <button class="calendar__event-close"></button>
                                                 </div>
+                                                <div class="calendar__event" data-date="2022.02.20">
+                                                    <div class="calendar__event-text">КазТрансГаз <span
+                                                            class="calendar__event-value calendar__event-value_green">1
+                                                            002 234 ₸</span></div>
+                                                    <button class="calendar__event-close"></button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -1074,7 +1079,7 @@
             </div>
         </div>
     </div>
-    <script src="dist/js/common.js?v=102"></script>
+    <script src="dist/js/common.js"></script>
 </body>
 
 </html>
