--- a/lk-spisok-sdelok.html
+++ b/lk-spisok-sdelok.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css?v=102">
+    <link rel="stylesheet" href="dist/css/styles.css">
     <title>iKapitalist - Список сделок</title>
 </head>
 
@@ -287,10 +287,28 @@
                                                 <label for="active-deals" class="switch__label"></label>
                                             </div>
                                         </div>
-                                        <div class="filter-menu__btns">
-                                            <button class="filter-btn filter-menu__btn">Инструмент</button>
-                                            <button class="filter-btn filter-menu__btn">Цель</button>
-                                            <button class="filter-btn filter-menu__btn">Город</button>
+                                        <div class="filter-menu__selects">
+                                            <div class="select select_medium select_small filter-menu__select">
+                                                <select class="select__field">
+                                                    <option value="last-year" class="select__option">Инструмент</option>
+                                                    <option value="last-year" class="select__option">Инструмент</option>
+                                                    <option value="last-year" class="select__option">Инструмент</option>
+                                                </select>
+                                            </div>
+                                            <div class="select select_medium select_small filter-menu__select">
+                                                <select class="select__field">
+                                                    <option value="last-year" class="select__option">Цель</option>
+                                                    <option value="last-year" class="select__option">Цель</option>
+                                                    <option value="last-year" class="select__option">Цель</option>
+                                                </select>
+                                            </div>
+                                            <div class="select select_medium select_small filter-menu__select">
+                                                <select class="select__field">
+                                                    <option value="last-year" class="select__option">Город</option>
+                                                    <option value="last-year" class="select__option">Город</option>
+                                                    <option value="last-year" class="select__option">Город</option>
+                                                </select>
+                                            </div>
                                         </div>
                                     </div>
                                     <button class="lk-btn lk-btn_mobile_fixed add-menu__submit">Показать 21</button>
@@ -669,7 +687,7 @@
             </div>
         </div>
     </div>
-    <script src="dist/js/common.js?v=102"></script>
+    <script src="dist/js/common.js"></script>
 </body>
 
 </html>
