--- a/smi.html
+++ b/smi.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css?v=102">
+    <link rel="stylesheet" href="dist/css/styles.css">
     <title>iKapitalist - СМИ о нас</title>
 </head>
 
@@ -315,7 +315,7 @@
             </div>
         </div>
     </footer>
-    <script src="dist/js/common.js?v=102"></script>
+    <script src="dist/js/common.js"></script>
 </body>
 
 </html>
